--- a/team-details.html
+++ b/team-details.html
@@ -290,243 +290,6 @@
             </section>
             <!-- team-details-area-end -->
 
-            <!-- testimonial-area -->
-            <section class="testimonial-area position-relative gray-bg pt-120 pb-120">
-                <div class="testi-bg" data-background="img/bg/testi_bg.jpg"></div>
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-xl-8 col-lg-7 order-0 order-lg-2">
-                            <div class="testimonial-active">
-                                <div class="testimonial-item">
-                                    <div class="testimonial-thumb">
-                                        <img src="img/images/testi_img.jpg" alt="">
-                                    </div>
-                                    <div class="testimonial-content">
-                                        <div class="testi-quote-icon">
-                                            <i class="flaticon-quotation"></i>
-                                        </div>
-                                        <h2>Lorem ipsum dolor sit amet, co nsectetur adipisicing elit, sed do eiusmod tempor
-                                            incididunt.</h2>
-                                        <div class="testi-avatar-info">
-                                            <span>founder</span>
-                                            <h4>daddy D. yankee</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="testimonial-item">
-                                    <div class="testimonial-thumb">
-                                        <img src="img/images/testi_img.jpg" alt="">
-                                    </div>
-                                    <div class="testimonial-content">
-                                        <div class="testi-quote-icon">
-                                            <i class="flaticon-quotation"></i>
-                                        </div>
-                                        <h2>Lorem ipsum dolor sit amet, co nsectetur adipisicing elit, sed do eiusmod tempor
-                                            incididunt.</h2>
-                                        <div class="testi-avatar-info">
-                                            <span>founder</span>
-                                            <h4>rosalina d. william</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="testimonial-item">
-                                    <div class="testimonial-thumb">
-                                        <img src="img/images/testi_img.jpg" alt="">
-                                    </div>
-                                    <div class="testimonial-content">
-                                        <div class="testi-quote-icon">
-                                            <i class="flaticon-quotation"></i>
-                                        </div>
-                                        <h2>Lorem ipsum dolor sit amet, co nsectetur adipisicing elit, sed do eiusmod tempor
-                                            incididunt.</h2>
-                                        <div class="testi-avatar-info">
-                                            <span>founder</span>
-                                            <h4>yalgaar h. halim</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="testimonial-item">
-                                    <div class="testimonial-thumb">
-                                        <img src="img/images/testi_img.jpg" alt="">
-                                    </div>
-                                    <div class="testimonial-content">
-                                        <div class="testi-quote-icon">
-                                            <i class="flaticon-quotation"></i>
-                                        </div>
-                                        <h2>Lorem ipsum dolor sit amet, co nsectetur adipisicing elit, sed do eiusmod tempor
-                                            incididunt.</h2>
-                                        <div class="testi-avatar-info">
-                                            <span>founder</span>
-                                            <h4>daddy D. yankee</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-5">
-                            <div class="testi-avatar-active">
-                                <div class="testi-avatar-box">
-                                    <div class="testi-avatar-thumb">
-                                        <img src="img/images/testi_avatar01.jpg" alt="">
-                                    </div>
-                                    <div class="testi-avatar-content">
-                                        <span>founder</span>
-                                        <h4>daddy D. yankee</h4>
-                                    </div>
-                                </div>
-                                <div class="testi-avatar-box">
-                                    <div class="testi-avatar-thumb">
-                                        <img src="img/images/testi_avatar02.jpg" alt="">
-                                    </div>
-                                    <div class="testi-avatar-content">
-                                        <span>founder</span>
-                                        <h4>rosalina d. william</h4>
-                                    </div>
-                                </div>
-                                <div class="testi-avatar-box">
-                                    <div class="testi-avatar-thumb">
-                                        <img src="img/images/testi_avatar03.jpg" alt="">
-                                    </div>
-                                    <div class="testi-avatar-content">
-                                        <span>founder</span>
-                                        <h4>yalgaar h. halim</h4>
-                                    </div>
-                                </div>
-                                <div class="testi-avatar-box">
-                                    <div class="testi-avatar-thumb">
-                                        <img src="img/images/testi_avatar03.jpg" alt="">
-                                    </div>
-                                    <div class="testi-avatar-content">
-                                        <span>founder</span>
-                                        <h4>yalgaar h. halim</h4>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- testimonial-area-end -->
-
-            <!-- brand-area -->
-            <div class="brand-area gray-bg pt-120 pb-90">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item mb-30">
-                                <a href="#"><img src="img/brand/brand_logo01.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item active mb-30">
-                                <a href="#"><img src="img/brand/brand_logo02.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item mb-30">
-                                <a href="#"><img src="img/brand/brand_logo03.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item mb-30">
-                                <a href="#"><img src="img/brand/brand_logo04.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item mb-30">
-                                <a href="#"><img src="img/brand/brand_logo05.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item mb-30">
-                                <a href="#"><img src="img/brand/brand_logo06.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item mb-30">
-                                <a href="#"><img src="img/brand/brand_logo07.png" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- brand-area-end -->
-
-            <!-- blog-area -->
-            <section class="blog-area pt-120 pb-90">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6">
-                            <div class="section-title text-center mb-70">
-                                <h6 class="sub-title">blog</h6>
-                                <h2 class="title">news feeds</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-xl-5 col-lg-4 col-md-8 col-sm-10">
-                            <div class="blog-post-item bp-style-two bp-style-three mb-30">
-                                <div class="blog-post-thumb position-relative">
-                                    <a href="blog-details.html"><img src="img/blog/t_blog_thumb01.jpg" alt=""></a>
-                                    <a href="#" class="overlay-post-tag">senior care</a>
-                                </div>
-                                <div class="blog-post-content">
-                                    <div class="blog-post-meta">
-                                        <ul>
-                                            <li><i class="fal fa-user"></i>By <a href="#">Admin</a></li>
-                                            <li><i class="fal fa-calendar-alt"></i> 24th june 2021</li>
-                                        </ul>
-                                    </div>
-                                    <h2><a href="blog-details.html">Preliminary Results of One of the first Empirical Academic</a>
-                                    </h2>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-7 col-lg-8 col-md-12 col-sm-10">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="blog-post-item bp-style-two bp-style-three mb-30">
-                                        <div class="blog-post-thumb position-relative">
-                                            <a href="blog-details.html"><img src="img/blog/t_blog_thumb02.jpg" alt=""></a>
-                                            <a href="#" class="overlay-post-tag">senior care</a>
-                                        </div>
-                                        <div class="blog-post-content">
-                                            <div class="blog-post-meta">
-                                                <ul>
-                                                    <li><i class="fal fa-user"></i>By <a href="#">Admin</a></li>
-                                                    <li><i class="fal fa-calendar-alt"></i> 24th june 2021</li>
-                                                </ul>
-                                            </div>
-                                            <h2><a href="blog-details.html">Preliminary Results of One of the first</a></h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="blog-post-item bp-style-two bp-style-three mb-30">
-                                        <div class="blog-post-thumb position-relative">
-                                            <a href="blog-details.html"><img src="img/blog/t_blog_thumb03.jpg" alt=""></a>
-                                            <a href="#" class="overlay-post-tag">senior care</a>
-                                        </div>
-                                        <div class="blog-post-content">
-                                            <div class="blog-post-meta">
-                                                <ul>
-                                                    <li><i class="fal fa-user"></i>By <a href="#">Admin</a></li>
-                                                    <li><i class="fal fa-calendar-alt"></i> 24th june 2021</li>
-                                                </ul>
-                                            </div>
-                                            <h2><a href="blog-details.html">Preliminary Results of One of the first</a></h2>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- blog-area-end -->
-
         </main>
         <!-- main-area-emd -->
 
@@ -546,14 +309,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipi sicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                                 </div>
-                                <div class="footer-social">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-9">
@@ -565,9 +320,8 @@
                                     <ul>
                                         <li><a href="#">home</a></li>
                                         <li><a href="#">about us</a></li>
-                                        <li><a href="#">servoces</a></li>
+                                        <li><a href="#">services</a></li>
                                         <li><a href="#">news</a></li>
-                                        <li><a href="#">terms & codtions</a></li>
                                         <li><a href="#">contact</a></li>
                                     </ul>
                                     <ul>
