--- a/about-us.html
+++ b/about-us.html
@@ -238,56 +238,6 @@
             </section>
             <!-- breadcrumb-area-end -->
 
-            <!-- about-us-area -->
-            <section class="about-us-area about-style-four pt-120 pb-120">
-                <div class="container">
-                    <div class="row align-items-center justify-content-center">
-                        <div class="col-lg-6 col-md-10">
-                            <div class="about-wrapper">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="about-img">
-                                            <img src="img/images/t_about_img01.jpg" alt="">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="about-img">
-                                            <img src="img/images/t_about_img02.jpg" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="about-exp-box">
-                                    <div class="about-exp-content">
-                                        <h2><span class="odometer" data-count="32">00</span><small>+</small></h2>
-                                        <h6>years Experience</h6>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 pl-45">
-                            <div class="section-title mb-15">
-                                <h6 class="sub-title">about us</h6>
-                                <h2 class="title">thank you for noticing me an introduction to palliative care</h2>
-                            </div>
-                            <div class="about-us-content">
-                                <p>Commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.</p>
-                                <div class="about-info-wrap">
-                                    <div class="thumb">
-                                        <img src="img/images/about_info_thumb.jpg" alt="">
-                                    </div>
-                                    <div class="content">
-                                        <h4>Rosalina D. William</h4>
-                                        <span>Founder</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- about-us-area-end -->
-
             <!-- services-area -->
             <section class="services-area gray-bg pt-120 pb-90">
                 <div class="container">
@@ -338,99 +288,6 @@
             </section>
             <!-- services-area-end -->
 
-            <!-- brand-area -->
-            <div class="brand-area brand-bg" data-background="img/bg/brand_bg.jpg">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item-two mb-60">
-                                <a href="#"><img src="img/brand/w_brand_logo01.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item-two mb-60">
-                                <a href="#"><img src="img/brand/w_brand_logo02.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item-two mb-60">
-                                <a href="#"><img src="img/brand/w_brand_logo03.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item-two mb-60">
-                                <a href="#"><img src="img/brand/w_brand_logo04.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item-two mb-60">
-                                <a href="#"><img src="img/brand/w_brand_logo05.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item-two mb-60">
-                                <a href="#"><img src="img/brand/w_brand_logo06.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="brand-item-two mb-60">
-                                <a href="#"><img src="img/brand/w_brand_logo07.png" alt=""></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- brand-area-end -->
-
-            <!-- gallery-area -->
-            <div class="gallery-area fix">
-                <div class="container-fluid p-0">
-                    <div class="row no-gutters gallery-slide-active">
-                        <div class="col-xl-4">
-                            <div class="gallery-slide-item">
-                                <a class="popup-image" href="img/gallery/gallery_slide_thumb01.jpg">
-                                    <div class="icon"><i class="fal fa-plus"></i></div>
-                                    <img src="img/gallery/gallery_slide_thumb01.jpg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="gallery-slide-item">
-                                <a class="popup-image" href="img/gallery/gallery_slide_thumb02.jpg">
-                                    <div class="icon"><i class="fal fa-plus"></i></div>
-                                    <img src="img/gallery/gallery_slide_thumb02.jpg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="gallery-slide-item">
-                                <a class="popup-image" href="img/gallery/gallery_slide_thumb03.jpg">
-                                    <div class="icon"><i class="fal fa-plus"></i></div>
-                                    <img src="img/gallery/gallery_slide_thumb03.jpg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="gallery-slide-item">
-                                <a class="popup-image" href="img/gallery/gallery_slide_thumb04.jpg">
-                                    <div class="icon"><i class="fal fa-plus"></i></div>
-                                    <img src="img/gallery/gallery_slide_thumb04.jpg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="gallery-slide-item">
-                                <a class="popup-image" href="img/gallery/gallery_slide_thumb02.jpg">
-                                    <div class="icon"><i class="fal fa-plus"></i></div>
-                                    <img src="img/gallery/gallery_slide_thumb02.jpg" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- gallery-area-end -->
-
             <!-- newsletter-area -->
             <section class="newsletter-area cerise-bg pt-120 pb-110">
                 <div class="container">
@@ -478,14 +335,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipi sicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                                 </div>
-                                <div class="footer-social">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-9">
@@ -497,14 +346,12 @@
                                     <ul>
                                         <li><a href="#">home</a></li>
                                         <li><a href="#">about us</a></li>
-                                        <li><a href="#">servoces</a></li>
+                                        <li><a href="#">services</a></li>
                                         <li><a href="#">news</a></li>
-                                        <li><a href="#">terms & codtions</a></li>
                                         <li><a href="#">contact</a></li>
                                     </ul>
                                     <ul>
                                         <li><a href="#">privacy policy</a></li>
-                                        <li><a href="#">terms of use</a></li>
                                         <li><a href="#">copyright</a></li>
                                         <li><a href="#">careers</a></li>
                                     </ul>
