--- a/faq.html
+++ b/faq.html
@@ -399,14 +399,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipi sicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                                 </div>
-                                <div class="footer-social">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-9">
@@ -418,9 +410,8 @@
                                     <ul>
                                         <li><a href="#">home</a></li>
                                         <li><a href="#">about us</a></li>
-                                        <li><a href="#">servoces</a></li>
+                                        <li><a href="#">services</a></li>
                                         <li><a href="#">news</a></li>
-                                        <li><a href="#">terms & codtions</a></li>
                                         <li><a href="#">contact</a></li>
                                     </ul>
                                     <ul>
