--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
                                             <li><a href="about-us.html">about</a></li>
                                             <li class="dropdown"><a href="#">pages</a>
                                                 <ul class="submenu">
-                                                    <li><a href="portfolio.html">our portfolio</a></li>
-                                                    <li><a href="portfolio-details.html">portfolio details</a></li>
                                                     <li><a href="team.html">Our Team</a></li>
                                                     <li><a href="team-details.html">Team details</a></li>
                                                     <li><a href="faq.html">faq page</a></li>
@@ -375,49 +373,6 @@
                 </div>
             </section>
             <!-- services-area-end -->
-
-            <!-- skill-area -->
-            <section class="skill-area theme-bg pt-120 pb-120">
-                <div class="skill-overlay-img" data-background="img/images/skill_overlay_img.jpg">
-                    <a href="https://www.youtube.com/watch?v=YPF_KMixLNE" class="popup-video"><i class="fas fa-play"></i></a>
-                </div>
-                <div class="container">
-                    <div class="row justify-content-end">
-                        <div class="col-lg-6">
-                            <div class="section-title white-title mb-50">
-                                <h6 class="sub-title">skills</h6>
-                                <h2 class="title">Our Amenities & how it looks like</h2>
-                                <p class="title-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                aliqua. Ut enim ad minim ven iam, quis nostrud exercitation ullamco laboris.</p>
-                            </div>
-                            <div class="skill-wrap">
-                                <div class="single-skill-item">
-                                    <h6>Friendly companionship</h6>
-                                    <div class="progress">
-                                        <div class="progress-bar wow slideInLeft" data-wow-duration="2s" data-wow-delay=".2s" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
-                                            aria-valuemax="100"><span>75%</span></div>
-                                    </div>
-                                </div>
-                                <div class="single-skill-item">
-                                    <h6>elderly care service</h6>
-                                    <div class="progress">
-                                        <div class="progress-bar wow slideInLeft" data-wow-duration="2s" data-wow-delay=".4s" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
-                                            aria-valuemax="100"><span>90%</span></div>
-                                    </div>
-                                </div>
-                                <div class="single-skill-item">
-                                    <h6>personal care</h6>
-                                    <div class="progress">
-                                        <div class="progress-bar wow slideInLeft" data-wow-duration="2s" data-wow-delay=".6s" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0"
-                                            aria-valuemax="100"><span>65%</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- skill-area-end -->
 
             <!-- fact-area -->
             <section class="fact-area pt-120">
@@ -774,29 +729,6 @@
                 </div>
             </section>
             <!-- blog-area-end -->
-
-            <!-- free-quote-area -->
-            <div class="free-quote-area">
-                <div class="container">
-                    <div class="free-quote-wrap">
-                        <div class="row no-gutters align-items-center">
-                            <div class="col-lg-6">
-                                <div class="free-quote-img" data-background="img/images/free_quote_img.jpg"></div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="free-quote-content">
-                                    <h4>Get free quote</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                        dolore magna aliqua.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="free-quote-icon"><i class="flaticon-headphones"></i></div>
-                    </div>
-                </div>
-            </div>
-            <!-- free-quote-area-end -->
-
         </main>
         <!-- main-area-emd -->
 
@@ -816,14 +748,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipi sicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                                 </div>
-                                <div class="footer-social">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-9">
@@ -835,13 +759,11 @@
                                     <ul>
                                         <li><a href="#">home</a></li>
                                         <li><a href="#">about us</a></li>
-                                        <li><a href="#">servoces</a></li>
+                                        <li><a href="#">services</a></li>
                                         <li><a href="#">news</a></li>
-                                        <li><a href="#">terms & codtions</a></li>
                                         <li><a href="#">contact</a></li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">privacy policy</a></li>
                                         <li><a href="#">terms of use</a></li>
                                         <li><a href="#">copyright</a></li>
                                         <li><a href="#">careers</a></li>
