--- a/services.html
+++ b/services.html
@@ -369,103 +369,6 @@
             </section>
             <!-- skill-area-end -->
 
-            <!-- blog-area -->
-            <section class="blog-area pt-120 pb-70">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6">
-                            <div class="section-title text-center mb-70">
-                                <h6 class="sub-title">blog</h6>
-                                <h2 class="title">news feeds</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container custom-container">
-                    <div class="row blog-active">
-                        <div class="col-lg-6">
-                            <div class="blog-post-item bp-style-one mb-50">
-                                <div class="blog-post-thumb">
-                                    <a href="blog-details.html">
-                                        <img src="img/blog/blog_thumb01.jpg" alt="">
-                                        <div class="overlay-post-date">23 <span>jan</span></div>
-                                    </a>
-                                </div>
-                                <div class="blog-post-content">
-                                    <div class="blog-post-tag">
-                                        <a href="#">senior,</a>
-                                        <a href="#">care,</a>
-                                        <a href="#">health</a>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                        labore et dolore magna.</p>
-                                    <div class="blog-post-avatar">
-                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>
-                                        <div class="info">
-                                            <h6>Posted By <a href="#">Will smith</a></h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="blog-post-item bp-style-one mb-50">
-                                <div class="blog-post-thumb">
-                                    <a href="blog-details.html">
-                                        <img src="img/blog/blog_thumb02.jpg" alt="">
-                                        <div class="overlay-post-date">20 <span>jan</span></div>
-                                    </a>
-                                </div>
-                                <div class="blog-post-content">
-                                    <div class="blog-post-tag">
-                                        <a href="#">senior,</a>
-                                        <a href="#">care,</a>
-                                        <a href="#">health</a>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                        labore et dolore magna.</p>
-                                    <div class="blog-post-avatar">
-                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>
-                                        <div class="info">
-                                            <h6>Posted By <a href="#">Will smith</a></h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="blog-post-item bp-style-one mb-50">
-                                <div class="blog-post-thumb">
-                                    <a href="blog-details.html">
-                                        <img src="img/blog/blog_thumb03.jpg" alt="">
-                                        <div class="overlay-post-date">18 <span>jan</span></div>
-                                    </a>
-                                </div>
-                                <div class="blog-post-content">
-                                    <div class="blog-post-tag">
-                                        <a href="#">senior,</a>
-                                        <a href="#">care,</a>
-                                        <a href="#">health</a>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                        labore et dolore magna.</p>
-                                    <div class="blog-post-avatar">
-                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>
-                                        <div class="info">
-                                            <h6>Posted By <a href="#">Will smith</a></h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- blog-area-end -->
-
         </main>
         <!-- main-area-emd -->
 
@@ -485,14 +388,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipi sicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                                 </div>
-                                <div class="footer-social">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-9">
@@ -504,9 +399,8 @@
                                     <ul>
                                         <li><a href="#">home</a></li>
                                         <li><a href="#">about us</a></li>
-                                        <li><a href="#">servoces</a></li>
+                                        <li><a href="#">services</a></li>
                                         <li><a href="#">news</a></li>
-                                        <li><a href="#">terms & codtions</a></li>
                                         <li><a href="#">contact</a></li>
                                     </ul>
                                     <ul>
@@ -554,24 +448,6 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="copyright-area copyright-style-two gray-lite-bg">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-5 col-md-6">
-                            <div class="copyright-text">
-                                <h6>Copyright © 2021 All Rights Reserved.</h6>
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-md-6">
-                            <div class="copyright-right-wrap">
-                                <button class="scroll-top scroll-to-target" data-target="html">
-                                    <i class="fal fa-long-arrow-up"></i>
-                                </button>
                             </div>
                         </div>
                     </div>
