--- a/team.html
+++ b/team.html
@@ -313,129 +313,129 @@
             </section>
             <!-- team-area-end -->
 
-            <!-- cta-area -->
-            <section class="cat-area inner-cta-area">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-xl-5 col-lg-7 col-md-10">
-                            <div class="cta-inner-wrap text-center">
-                                <div class="cta-icon">
-                                    <img src="img/icon/cta_logo_icon.png" alt="">
-                                </div>
-                                <div class="section-title text-center mb-10">
-                                    <h6 class="sub-title">25+ years of experience</h6>
-                                    <h2 class="title">get any kind answers here right now.</h2>
-                                </div>
-                                <div class="inner-cta-btn">
-                                    <a href="#" class="btn">get appointment<i class="fal fa-calendar-alt"></i></a>
-                                    <a href="#" class="btn white-btn">learn more<i class="fal fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cta-rotate-img cri-one"><img src="img/images/cta_rotate_img01.png" alt=""></div>
-                <div class="cta-rotate-img cri-two"><img src="img/images/cta_rotate_img02.png" alt=""></div>
-                <div class="cta-rotate-img cri-three"><img src="img/images/cta_rotate_img03.png" alt=""></div>
-            </section>
-            <!-- cta-area-end -->
+<!--            &lt;!&ndash; cta-area &ndash;&gt;-->
+<!--            <section class="cat-area inner-cta-area">-->
+<!--                <div class="container">-->
+<!--                    <div class="row justify-content-center">-->
+<!--                        <div class="col-xl-5 col-lg-7 col-md-10">-->
+<!--                            <div class="cta-inner-wrap text-center">-->
+<!--                                <div class="cta-icon">-->
+<!--                                    <img src="img/icon/cta_logo_icon.png" alt="">-->
+<!--                                </div>-->
+<!--                                <div class="section-title text-center mb-10">-->
+<!--                                    <h6 class="sub-title">25+ years of experience</h6>-->
+<!--                                    <h2 class="title">get any kind answers here right now.</h2>-->
+<!--                                </div>-->
+<!--                                <div class="inner-cta-btn">-->
+<!--                                    <a href="#" class="btn">get appointment<i class="fal fa-calendar-alt"></i></a>-->
+<!--                                    <a href="#" class="btn white-btn">learn more<i class="fal fa-arrow-right"></i></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="cta-rotate-img cri-one"><img src="img/images/cta_rotate_img01.png" alt=""></div>-->
+<!--                <div class="cta-rotate-img cri-two"><img src="img/images/cta_rotate_img02.png" alt=""></div>-->
+<!--                <div class="cta-rotate-img cri-three"><img src="img/images/cta_rotate_img03.png" alt=""></div>-->
+<!--            </section>-->
+<!--            &lt;!&ndash; cta-area-end &ndash;&gt;-->
 
-            <!-- blog-area -->
-            <section class="blog-area pt-120 pb-70">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6">
-                            <div class="section-title text-center mb-70">
-                                <h6 class="sub-title">blog</h6>
-                                <h2 class="title">news feeds</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container custom-container">
-                    <div class="row blog-active">
-                        <div class="col-lg-6">
-                            <div class="blog-post-item bp-style-one mb-50">
-                                <div class="blog-post-thumb">
-                                    <a href="blog-details.html">
-                                        <img src="img/blog/blog_thumb01.jpg" alt="">
-                                        <div class="overlay-post-date">23 <span>jan</span></div>
-                                    </a>
-                                </div>
-                                <div class="blog-post-content">
-                                    <div class="blog-post-tag">
-                                        <a href="#">senior,</a>
-                                        <a href="#">care,</a>
-                                        <a href="#">health</a>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                        labore et dolore magna.</p>
-                                    <div class="blog-post-avatar">
-                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>
-                                        <div class="info">
-                                            <h6>Posted By <a href="#">Will smith</a></h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="blog-post-item bp-style-one mb-50">
-                                <div class="blog-post-thumb">
-                                    <a href="blog-details.html">
-                                        <img src="img/blog/blog_thumb02.jpg" alt="">
-                                        <div class="overlay-post-date">20 <span>jan</span></div>
-                                    </a>
-                                </div>
-                                <div class="blog-post-content">
-                                    <div class="blog-post-tag">
-                                        <a href="#">senior,</a>
-                                        <a href="#">care,</a>
-                                        <a href="#">health</a>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                        labore et dolore magna.</p>
-                                    <div class="blog-post-avatar">
-                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>
-                                        <div class="info">
-                                            <h6>Posted By <a href="#">Will smith</a></h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="blog-post-item bp-style-one mb-50">
-                                <div class="blog-post-thumb">
-                                    <a href="blog-details.html">
-                                        <img src="img/blog/blog_thumb03.jpg" alt="">
-                                        <div class="overlay-post-date">18 <span>jan</span></div>
-                                    </a>
-                                </div>
-                                <div class="blog-post-content">
-                                    <div class="blog-post-tag">
-                                        <a href="#">senior,</a>
-                                        <a href="#">care,</a>
-                                        <a href="#">health</a>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                        labore et dolore magna.</p>
-                                    <div class="blog-post-avatar">
-                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>
-                                        <div class="info">
-                                            <h6>Posted By <a href="#">Will smith</a></h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- blog-area-end -->
+<!--            &lt;!&ndash; blog-area &ndash;&gt;-->
+<!--            <section class="blog-area pt-120 pb-70">-->
+<!--                <div class="container">-->
+<!--                    <div class="row justify-content-center">-->
+<!--                        <div class="col-lg-6">-->
+<!--                            <div class="section-title text-center mb-70">-->
+<!--                                <h6 class="sub-title">blog</h6>-->
+<!--                                <h2 class="title">news feeds</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="container custom-container">-->
+<!--                    <div class="row blog-active">-->
+<!--                        <div class="col-lg-6">-->
+<!--                            <div class="blog-post-item bp-style-one mb-50">-->
+<!--                                <div class="blog-post-thumb">-->
+<!--                                    <a href="blog-details.html">-->
+<!--                                        <img src="img/blog/blog_thumb01.jpg" alt="">-->
+<!--                                        <div class="overlay-post-date">23 <span>jan</span></div>-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                                <div class="blog-post-content">-->
+<!--                                    <div class="blog-post-tag">-->
+<!--                                        <a href="#">senior,</a>-->
+<!--                                        <a href="#">care,</a>-->
+<!--                                        <a href="#">health</a>-->
+<!--                                    </div>-->
+<!--                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>-->
+<!--                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut-->
+<!--                                        labore et dolore magna.</p>-->
+<!--                                    <div class="blog-post-avatar">-->
+<!--                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>-->
+<!--                                        <div class="info">-->
+<!--                                            <h6>Posted By <a href="#">Will smith</a></h6>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-lg-6">-->
+<!--                            <div class="blog-post-item bp-style-one mb-50">-->
+<!--                                <div class="blog-post-thumb">-->
+<!--                                    <a href="blog-details.html">-->
+<!--                                        <img src="img/blog/blog_thumb02.jpg" alt="">-->
+<!--                                        <div class="overlay-post-date">20 <span>jan</span></div>-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                                <div class="blog-post-content">-->
+<!--                                    <div class="blog-post-tag">-->
+<!--                                        <a href="#">senior,</a>-->
+<!--                                        <a href="#">care,</a>-->
+<!--                                        <a href="#">health</a>-->
+<!--                                    </div>-->
+<!--                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>-->
+<!--                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut-->
+<!--                                        labore et dolore magna.</p>-->
+<!--                                    <div class="blog-post-avatar">-->
+<!--                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>-->
+<!--                                        <div class="info">-->
+<!--                                            <h6>Posted By <a href="#">Will smith</a></h6>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-lg-6">-->
+<!--                            <div class="blog-post-item bp-style-one mb-50">-->
+<!--                                <div class="blog-post-thumb">-->
+<!--                                    <a href="blog-details.html">-->
+<!--                                        <img src="img/blog/blog_thumb03.jpg" alt="">-->
+<!--                                        <div class="overlay-post-date">18 <span>jan</span></div>-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                                <div class="blog-post-content">-->
+<!--                                    <div class="blog-post-tag">-->
+<!--                                        <a href="#">senior,</a>-->
+<!--                                        <a href="#">care,</a>-->
+<!--                                        <a href="#">health</a>-->
+<!--                                    </div>-->
+<!--                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit am et, consectetur</a></h2>-->
+<!--                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut-->
+<!--                                        labore et dolore magna.</p>-->
+<!--                                    <div class="blog-post-avatar">-->
+<!--                                        <div class="thumb"><img src="img/blog/blog_post_avatar.jpg" alt=""></div>-->
+<!--                                        <div class="info">-->
+<!--                                            <h6>Posted By <a href="#">Will smith</a></h6>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </section>-->
+<!--            &lt;!&ndash; blog-area-end &ndash;&gt;-->
 
         </main>
         <!-- main-area-emd -->
@@ -456,14 +456,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipi sicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                                 </div>
-                                <div class="footer-social">
-                                    <ul>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-9">
@@ -475,9 +467,8 @@
                                     <ul>
                                         <li><a href="#">home</a></li>
                                         <li><a href="#">about us</a></li>
-                                        <li><a href="#">servoces</a></li>
+                                        <li><a href="#">services</a></li>
                                         <li><a href="#">news</a></li>
-                                        <li><a href="#">terms & codtions</a></li>
                                         <li><a href="#">contact</a></li>
                                     </ul>
                                     <ul>
